--- a/src/pages/Music.css
+++ b/src/pages/Music.css
@@ -111,12 +111,13 @@ display: grid;
 place-items: center;
 }
 
-.play-button {
+.play-buttons {
     width: 100%;
     height: 100%;
     margin: 0px;
-    padding: 10px;
-    background-color: #413939;
+    padding: 18% 24% 18% 24%;
+    border-radius: 50%;
+    background-color: rgb(65, 52, 52);
 }
 
 .bottom {
